--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["@angular/material/prebuilt-themes/pink-bluegrey.css", "src/styles.scss"],
+            "styles": ["@angular/material/prebuilt-themes/pink-bluegrey.css", "src/styles.scss", "node_modules/bootstrap/dist/css/bootstrap.min.css", "src/styles.css"],
             "scripts": []
           },
           "configurations": {
